// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDayFromTibetan() should return the correct western date for day marked as leap even though it isn't 1`] = `
Object {
  "day": 4,
  "isDoubledDay": false,
  "isLeapDay": false,
  "isPreviousSkipped": false,
  "month": Object {
    "isDoubledMonth": true,
    "isLeapMonth": false,
    "month": 8,
  },
  "skippedDay": false,
  "westernDate": "2013-10-08",
  "year": 2140,
}
`;

exports[`getDayFromTibetan() should return the correct western date for leap day 1`] = `
Object {
  "day": 8,
  "isDoubledDay": true,
  "isLeapDay": true,
  "isPreviousSkipped": false,
  "month": Object {
    "isDoubledMonth": false,
    "isLeapMonth": false,
    "month": 2,
  },
  "skippedDay": false,
  "westernDate": "2013-03-19",
  "year": 2140,
}
`;

exports[`getDayFromTibetan() should return the correct western date for main day that has leap day 1`] = `
Object {
  "day": 8,
  "isDoubledDay": true,
  "isLeapDay": false,
  "isPreviousSkipped": false,
  "month": Object {
    "isDoubledMonth": false,
    "isLeapMonth": false,
    "month": 2,
  },
  "skippedDay": false,
  "westernDate": "2013-03-20",
  "year": 2140,
}
`;

exports[`getDayFromTibetan() should return the correct western date for skipped day 1`] = `
Object {
  "day": 20,
  "isDoubledDay": false,
  "isLeapDay": false,
  "isPreviousSkipped": false,
  "month": Object {
    "isDoubledMonth": false,
    "isLeapMonth": false,
    "month": 2,
  },
  "skippedDay": true,
  "westernDate": "2013-03-31",
  "year": 2140,
}
`;

exports[`getDayFromTibetan() should return the correct western date in leap month 1`] = `
Object {
  "day": 4,
  "isDoubledDay": false,
  "isLeapDay": false,
  "isPreviousSkipped": false,
  "month": Object {
    "isDoubledMonth": true,
    "isLeapMonth": true,
    "month": 8,
  },
  "skippedDay": false,
  "westernDate": "2013-09-09",
  "year": 2140,
}
`;

exports[`getDayFromTibetan() should return the correct western date in non-leap month 1`] = `
Object {
  "day": 4,
  "isDoubledDay": false,
  "isLeapDay": false,
  "isPreviousSkipped": false,
  "month": Object {
    "isDoubledMonth": true,
    "isLeapMonth": false,
    "month": 8,
  },
  "skippedDay": false,
  "westernDate": "2013-10-08",
  "year": 2140,
}
`;
